proof of concept

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,11 @@
   height: 1056px;
   width: 816px;
   background-color: white;
+  padding: 1em;
 }
 body {
   background-color: gray;
   padding: 0px;
   margin: 0px;
+  font-family: "Helvetica";
 }
